--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
+.App{
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+.GridHead, .GridRow {
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
+  align-items: center;
+  background: #f0f0f0;
+}
+
+.GridHeadItem, .GridRowItem{
+  width: 33%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.GridHead{
+  height: 40px;
+  border-top: 1.5px solid gray;
+  border-bottom: 1.5px solid gray;
+  color: #646464;
+  font-weight: 500;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.GridRow {
+  height: 32px;
+  box-sizing: border-box;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.GreenBorder{
+  border-left: 5px solid #070;
 }
 
-.App-link {
-  color: #61dafb;
+.GrayBorder{
+  border-left: 5px solid gray;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.RedBorder{
+  border-left: 5px solid #c00;
+}
+
+.GreenColor{
+  color: #070;
+}
+
+.RedColor{
+  color: #c00;
 }
